--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -6,19 +6,5 @@ on:
 
 jobs:
   publish:
-    runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
-    steps:
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          role-to-assume: arn:aws:iam::723346149663:role/terraform-modules-role
-          aws-region: us-west-2
-      - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Mirror in S3
-        run: make s3
+    uses: observeinc/.github/.github/workflows/terraform-observe_prerelease.yaml@main
+    secrets: inherit
