ci: fix caller workflows for ci-tests and pre-commit-autoupdate

--- a/.github/workflows/ci-tests.yaml
+++ b/.github/workflows/ci-tests.yaml
@@ -19,3 +19,4 @@ jobs:
 
   pre-commits:
     uses: observeinc/.github/.github/workflows/terraform-observe_pre-commit.yaml@main
+    secrets: inherit
